Setups with border of the area in DEM

--- a/setup_Dresden/settings.ini
+++ b/setup_Dresden/settings.ini
@@ -2,7 +2,7 @@
 ; Name of the project; files are saved in a subdirectory with this name
 proj_name=mymodel
 ; Path to the GSFLOW executable
-gsflow_exe=C:\WRDAPP\GSFLOW_1.2.2\bin
+gsflow_exe=C:\WRDAPP\GSFLOW_1.2.2\bin\gsflow.exe
 ; GSFLOW version
 gsflow_ver=1.2.2
 ; Path to the directory that will store your GSFLOW input and output files;
@@ -14,7 +14,7 @@ gsflow_path_simdir=C:\Model_Muse_Dateien\Masterarbeit\simple_setup\grassgis_inpu
 ; This can be any GDAL-compatible file
 
 [elevation_inputs]
-DEM_file_path_to_import=C:\Model_Muse_Dateien\Masterarbeit\simple_setup\grassgis_input\grass_rgb.tif
+DEM_file_path_to_import=C:\Model_Muse_Dateien\Masterarbeit\simple_setup\grassgis_input\Dresden_margin\dd_margin.tif
 ;pseudo_mercator:laengster modelllauf, ebenm problem: evt. keine abflussbildung weil kein gradient
 ;geneigt_pm: Problem Nullzellen
 ;origin:C:\Model_Muse_Dateien\Masterarbeit\simple_setup\grassgis_input\Dresden\grass_rgb_n.tif
@@ -25,9 +25,9 @@ LAND_COVER_file_path_to_import=
 # Input soil raster file path
 SOIL_file_path_to_import=
 ; 0=bare soil; 1=grasses; 2=shrubs; 3=trees; 4=coniferous
-cov_type=1
+cov_type=3
 ; 1=sand; 2=loam; 3=clay
-soil_type=2
+soil_type=3
 
 [GRASS_core]
 ; GIS database directory for GRASS -- "grassdata" is a common name (make this)
@@ -62,17 +62,21 @@ flow_weights=
 ; if flow_weights is not defined, this is simply the area in square meters
 ; at which a stream will become defined
 ;threshold_drainage=
-threshold_drainage_area_meters2=4000000
+threshold_drainage_area_meters2=50
 ; MODFLOW cell target side length; to fit grid, will not be exactly this value
-MODFLOW_grid_resolution_meters=1000
+MODFLOW_grid_resolution_meters=50
 ; Target pour point x; will snap to closest segment
-outlet_point_x=5656644.91698
+outlet_point_x=412002.
+;5656028.
 ;412002
 ;13.744401
 ; Target pour point y; will snap to closest segment
-outlet_point_y=412002.916388
+outlet_point_y=5656618.
+;412014.
 ;565662
 ;51.054853
+
+;own_margin: 412015	5656029
 
 [GRASS_hydraulics]
 ; Method to compute hydraulic geometry; see ICALC in GSFLOW manual
@@ -90,7 +94,7 @@ channel_Mannings_n_vector_col=
 overbank_Mannings_n=0.060
 ; Channel width [m], uniform across watershed
 ; Overridden if options below are not left blank
-channel_width=25
+channel_width=5
 ; Channel width vector map (in GRASS GIS location)
 ; overrides uniform channel width (above)
 channel_width_vector=
@@ -129,7 +133,7 @@ climate_hru_dir=
 NLAY=1
 ; Layer thickness [m] For multiple layers, enter comma-separated list,
 ; starting from the top layer.
-DZ=105
+DZ=140
 ; set fl_create_hydcond=1 to implement Python script to create spatially distributed 
 ; hydraulic conductivity; set fl_create_hydcond=0 for user-set hydraulic conductivity
 fl_create_hydcond=1
